modify some content

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,14 +111,13 @@
           </div>
         </div>
         <div class="navbar-name">
+          <a class="menu-button" href="/about/">About</a>
           <a class="menu-button" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
           <a class="menu-button" href="/letters/">Letters</a>
-          <a class="menu-button" href="/consultation/">Consultation</a>
         </div>
         <div class="mobile-menu">
           <a class="menu-button" href="/blog/">Blog</a>
           <a class="menu-button" href="/letters/">Letters</a>
-          <a class="menu-button" href="/consultation/">Consultation</a>
           <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
           <a class="menu-button" href="/about/">About</a>
           <a class="menu-button" href="/now/">Now</a>
