--- a/templates/base.html
+++ b/templates/base.html
@@ -1,66 +1,36 @@
 {% import "macros.html" as macro -%}
-{% set all_section_pages = get_section(path="_index.md") -%}
-{%- set_global file_lang_path = "" -%}
-{%- if config.default_language != lang -%}
-  {%- set_global file_lang_path = "." ~ lang -%}
-{%- endif -%}
-
-
 <!DOCTYPE html>
-<html
-  lang="{{ lang }}"
-  itemscope
-  itemtype="http://schema.org/Blog"
->
+<html lang="{{ lang }}" itemscope itemtype="http://schema.org/Blog">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" href="{{ get_url(path="site/styles/site.css",
-    trailing_slash=false,cachebust=true) | safe }}" async>
+    <link rel="stylesheet" href="{{ get_url(path="site/styles/site.css", trailing_slash=false, cachebust=true) | safe }}" async>
     <title>{% block title %}{{ config.title }}{% endblock title %}</title>
 
-    {% if config.generate_feeds %} <link rel="alternate"
-    type="application/rss+xml" title="RSS" href="{{ get_url(path="rss.xml") }}">
+    {% if config.generate_feeds %}
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ get_url(path="rss.xml") }}">
     {% endif %}
+    
     {% block canonical_url %}{% endblock canonical_url %}
-    <meta
-      name="description"
-      itemprop="about"
-      content="{% block description -%}{{ config.description }}{% endblock description -%}"
-    />
-    <meta
-      name="keywords"
-      itemprop="keywords"
-      content="keywords"
-    />
-    <meta name="author" itemprop="author" content="{{ config.extra.author }}" />
-    <meta itemprop="headline" content="{{ config.title }}" />
-    <meta itemprop="copyrightYear" content="{{ now() | date(format="%Y") }}" />
+    
+    <meta name="description" content="{% block description %}{{ config.description }}{% endblock description %}" />
+    <meta name="author" content="{{ config.extra.author }}" />
+    
+    <!-- Favicon -->
     <link rel="icon" href="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png" type="image/x-icon"> 
     <link rel="icon" type="image/png" sizes="32x32" href="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png"> 
-    <link rel="icon" type="image/png" sizes="16x16" href="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png">
-    <link rel="manifest" href="{{ get_url(path="site/images/manifest.json") }}">
     <link rel="me" href="https://pkm.social/@pj"> 
-    <link rel="preload" as="font">
-    <meta name="msapplication-TileColor" content="{{ config.extra.theme_color }}" />
-    <meta name="msapplication-TileImage" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png">
     <meta name="theme-color" content="{{ config.extra.theme_color }}" />
 
-    <meta
-      property="og:title"
-      content="{% block ogtitle %}{{ config.title }}{% endblock ogtitle %}"
-    />
-    <meta
-      property="og:description"
-      content="{% block ogdesc %}{{ config.description }}{% endblock ogdesc %}"
-    />
-    <meta
-      property="og:url"
-      content="{% block ogurl %}{{ config.base_url }}{% endblock ogurl%}"
-    />
+    <!-- Open Graph -->
+    <meta property="og:title" content="{% block ogtitle %}{{ config.title }}{% endblock ogtitle %}" />
+    <meta property="og:description" content="{% block ogdesc %}{{ config.description }}{% endblock ogdesc %}" />
+    <meta property="og:url" content="{% block ogurl %}{{ config.base_url }}{% endblock ogurl%}" />
     <meta property="og:site_name" content="{{ config.title }}" />
     <meta property="og:type" content="website" />
+    
+    <!-- OG Image -->
     {% if page.extra.image %}
     <meta property="og:image" content="{% block ogimg %}{{ page.extra.image }}{% endblock ogimg %}" />
     {% else %}
@@ -68,27 +38,27 @@
     <meta property="og:image:width" content="600"/>
     <meta property="og:image:height" content="600"/>
     {% endif %}
+    
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     {% if config.extra.twitter_user %}
     <meta name="twitter:site" content="{{ config.extra.twitter_user }}" />
     <meta name="twitter:creator" content="{{ config.extra.twitter_user }}" />
     {% endif %}
+    
+    <!-- Twitter Image -->
     {% if page.extra.image %}
-    <meta name="twitter:image" content="{% block ogimg %}{{ page.extra.image }}{% endblock ogimg %}" />
-    <meta
-      name="twitter:image:alt"
-      content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}" />
+    <meta name="twitter:image" content="{{ page.extra.image }}" />
+    <meta name="twitter:image:alt" content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}" />
     {% else %}
     <meta name="twitter:image" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/og-02-1200-630_1hIeSM.png" />
-    <meta
-      name="twitter:image:alt"
-      content="{% block ogaltimg %}{{ config.title }}{% endblock ogaltimg %}" />
+    <meta name="twitter:image:alt" content="{{ config.title }}" />
     {% endif %}
+    
+    <!-- Fancybox -->
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+    
     {% block post_meta %}{% endblock post_meta %}
   </head>
 
@@ -97,51 +67,54 @@
       {% block nav_bar -%}
       <nav class="navbar-top">
         <div class="nav-container">
-        <div>
-          <a class="navbar-a" href="{{ get_url(path="@/_index.md",lang=lang) }}">
-            <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width="48" height="48" alt="Logo of Pinchlime">
-            <span class="navbar-name">Pin 起來</span>
-          </a> 
-        </div>
-        <div class="mobile-menu-icon">
-          <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
+          <div>
+            <a class="navbar-a" href="/">
+              <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width="48" height="48" alt="Logo of Pinchlime">
+              <span class="navbar-name">Pin 起來</span>
+            </a> 
           </div>
-        </div>
-        <div class="navbar-name">
-          <a class="menu-button" href="/about/">About</a>
-          <a class="menu-button" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
-          <a class="menu-button" href="/letters/">Letters</a>
-        </div>
-        <div class="mobile-menu">
-          <a class="menu-button" href="/blog/">Blog</a>
-          <a class="menu-button" href="/letters/">Letters</a>
-          <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
-          <a class="menu-button" href="/about/">About</a>
-          <a class="menu-button" href="/now/">Now</a>
-          <a class="menu-button" href="/manifesto/">Manifesto</a>
-          <a class="menu-button" href="/changelog/">Changelog</a>
-        </div>
+          <div class="mobile-menu-icon">
+            <div class="hamburger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+          <div class="navbar-name">
+            <a class="menu-button" href="/about/">About</a>
+            <a class="menu-button" href="/blog/">Blog</a>
+            <a class="menu-button" href="/letters/">Letters</a>
+          </div>
+          <div class="mobile-menu">
+            <a class="menu-button" href="/blog/">Blog</a>
+            <a class="menu-button" href="/letters/">Letters</a>
+            <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
+            <a class="menu-button" href="/about/">About</a>
+            <a class="menu-button" href="/now/">Now</a>
+            <a class="menu-button" href="/manifesto/">Manifesto</a>
+            <a class="menu-button" href="/changelog/">Changelog</a>
+          </div>
         </div>
       </nav>
       {% endblock nav_bar %}
     </section>
-    <section id="root" >
+    
+    <section id="root">
       {% block body_zone -%}
       <main class="body-zone flex justify-between flex-1">
-          <section id="main" class="main flex-1 py">
-            <div>
-              {% block main %}
-              {% endblock main %}
-            </div>
-          </section>
+        <section id="main" class="main flex-1 py">
+          <div>
+            {% block main %}
+            {% endblock main %}
+          </div>
+        </section>
       </main>
       {% endblock body_zone -%}
-   
     </section>
+    
     <section id="bottom"></section>
+    
+    <!-- Scripts -->
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         const hamburger = document.querySelector(".hamburger");
@@ -153,11 +126,11 @@
         });
       });
     </script>
+    
     <script>
-      Fancybox.bind("[data-fancybox]", {
-      // Your custom options
-    });
+      Fancybox.bind("[data-fancybox]", {});
     </script>
+    
     {% block custom_script %}
     {% endblock custom_script -%}
   </body>
