--- a/templates/page.html
+++ b/templates/page.html
@@ -1,48 +1,56 @@
 {% extends "base.html" -%}
-{% block post_meta-%}
+
+{% block post_meta -%}
 <meta name="title" content="{{ page.title }}">
 {% endblock post_meta -%}
+
 {% block canonical_url %}
 <link rel="canonical" href="{{ config.base_url }}{{ page.path }}" />
 {% endblock canonical_url %}
+
 {% block title %}{{ page.title }} - {{ config.title}}{% endblock title %}
 {% block ogtitle %}{{ page.title }} - {{ config.title}}{% endblock ogtitle %}
-{% block ogdesc %}{% if page.description %} {{ page.description }} {% elif page.summary %} {{page.summary | spaceless | striptags}}  {% endif %}{% endblock ogdesc %}
-{% block description %}{% if page.description %} {{ page.description }} {% elif page.summary %} {{page.summary | spaceless | striptags}}  {% endif %}{% endblock description %}
-{% block ogurl %}{% if page.path %}{{ config.base_url }}{{ page.path }} {% endif %}{% endblock ogurl %}
-{% block ogimg %}{% if page.extra.image %}{{ page.extra.image }}{% endif %}{% endblock ogimg %}
-{% block main %}
 
+{% block ogdesc %}{% if page.description %}{{ page.description }}{% elif page.summary %}{{page.summary | spaceless | striptags}}{% endif %}{% endblock ogdesc %}
+{% block description %}{% if page.description %}{{ page.description }}{% elif page.summary %}{{page.summary | spaceless | striptags}}{% endif %}{% endblock description %}
+
+{% block ogurl %}{% if page.path %}{{ config.base_url }}{{ page.path }}{% endif %}{% endblock ogurl %}
+{% block ogimg %}{% if page.extra.image %}{{ page.extra.image }}{% endif %}{% endblock ogimg %}
+
+{% block main %}
 <div class="element">
   <header id="overview">
-    {# Breadcrumbs based on page type #}
+    {# Breadcrumbs for non-single pages #}
     {% if page.extra.page_type != "single" %}
     <div class="breadcrumbs">
-      <a href="{{ get_url(path="/", lang=lang) }}">Pin 起來</a>          
+      <a href="{{ get_url(path="/", lang=lang) }}">Pin 起來</a>
+      
+      {% set page_section = "" %}
+      {% set section_url = "" %}
+      
       {% if page.extra.page_type == "archive" %}
-        <span class="separator">/</span>
-        <a class="category" href="{{ get_url(path="@/archive/_index.md",lang=lang) }}">Archive</a>
+        {% set page_section = "Archive" %}
+        {% set section_url = get_url(path="@/archive/_index.md", lang=lang) %}
       {% elif page.extra.page_type == "newsletter" %}
-        <span class="separator">/</span>
-        <a class="category" href="/newsletters/">Newsletters</a>
-        {% if page.taxonomies.categories %}
-        <span class="separator">/</span>
-        <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0],lang=lang) }}"> {{ page.taxonomies.categories[0] }}</a>
-        {% endif %}
-        {% if page.taxonomies.kinds %}
-        <span class="divider">/</span>
-        <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0],lang=lang) }}">{{ page.taxonomies.kinds[0] }}</a>    
-        {% endif %}
+        {% set page_section = "Newsletters" %}
+        {% set section_url = "/newsletters/" %}
       {% elif page.extra.page_type == "blog" %}
+        {% set page_section = "Blog" %}
+        {% set section_url = get_url(path="@/blog/_index.md", lang=lang) %}
+      {% endif %}
+      
+      {% if page_section != "" %}
         <span class="separator">/</span>
-        <a class="category" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
+        <a class="category" href="{{ section_url }}">{{ page_section }}</a>
+        
         {% if page.taxonomies.categories %}
         <span class="separator">/</span>
-        <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0],lang=lang) }}"> {{ page.taxonomies.categories[0] }}</a>
+        <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0], lang=lang) }}">{{ page.taxonomies.categories[0] }}</a>
         {% endif %}
+        
         {% if page.taxonomies.kinds %}
         <span class="divider">/</span>
-        <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0],lang=lang) }}">{{ page.taxonomies.kinds[0] }}</a>    
+        <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0], lang=lang) }}">{{ page.taxonomies.kinds[0] }}</a>
         {% endif %}
       {% endif %}
     </div>
@@ -62,58 +70,53 @@
       </div>
     </div>
   </header>
-        <section class="main">
-          <section id="start"></section>
-          <article>
-            {# Type-specific notices #}
-            <br>
-            {% if page.extra.page_type == "archive" %}
-            <setion>
-              <div class="archive-notice">
-                <p>
-                  <span class="archive-notice-icon">📦</span>
-                  <strong>這是一篇<a href="/archive">已歸檔</a>的文章</strong><br>
-                  這代表著我認為這篇文章的資訊已經過時；或者是對我來說已經不那麼重要。<br><br>
-                  如果你還是能在這些文字上面發現任何有價值的資訊或想法，歡迎跟我分享，也許我又會有新的想法了！
-                </p>
-              </div>
-            </setion>
-            <hr>
-            {% elif page.extra.page_type == "newsletter" %}
-            <setion>
-              <div class="archive-notice">
-                <p>
-                你正在閱讀的是舊版的 Pin 起來電子報！<br>
-                我現在已經轉移到另一個平台寫信，歡迎參考<a href="/newsletters/stop-writing-newsletters">這篇說明</a>以訂閱最新的信。<br>
-                </p>
-              </div>
-            </setion>
-            <hr>
-            {% endif %}            
-            {{ page.content | safe }}
-            
-            {% if page.taxonomies.tags %}
-            <p>
-              {% for tag in page.taxonomies.tags %}
-              <a class="muted text-sm no-underline" href="{{ get_taxonomy_url(kind="tags", name=tag,lang=lang) }}">#{{ tag }}</a>{% if page.taxonomies.tags | length > 1 %}
-              {% if loop.index != page.taxonomies.tags | length %}&nbsp;{% endif %}{% endif %}
-              {% endfor %}
-            </p>
-            {% endif %}
-            <br>
-            {% if page.updated %}
-            <div class="muted updated-time">
-              <span>{{trans(key="label_updated",lang=lang)}}&nbsp;</span><time pubdate>{{ page.updated | date(format="%Y-%m-%d") }}</time>
-            </div>
-            <section id="backlinks">
-              {{ macro::backlink(pages=page.backlinks) }}
-            </section>
-            {% endif %}
-          </article>
-         
-        </section>
-      </section>
+  
+  <section class="main">
+    <section id="start"></section>
+    <article>
+      {# Type-specific notices #}
+      <br>
+      {% if page.extra.page_type == "archive" %}
+      <div class="archive-notice">
+        <p>
+          <span class="archive-notice-icon">📦</span>
+          <strong>這是一篇<a href="/archive">已歸檔</a>的文章</strong><br>
+          這代表著我認為這篇文章的資訊已經過時；或者是對我來說已經不那麼重要。<br><br>
+          如果你還是能在這些文字上面發現任何有價值的資訊或想法，歡迎跟我分享，也許我又會有新的想法了！
+        </p>
+      </div>
+      <hr>
+      {% elif page.extra.page_type == "newsletter" %}
+      <div class="archive-notice">
+        <p>
+          你正在閱讀的是舊版的 Pin 起來電子報！<br>
+          我現在已經轉移到另一個平台寫信，歡迎參考<a href="/newsletters/stop-writing-newsletters">這篇說明</a>以訂閱最新的信。<br>
+        </p>
+      </div>
+      <hr>
+      {% endif %}
       
-
+      {{ page.content | safe }}
+      
+      {% if page.taxonomies.tags %}
+      <p>
+        {% for tag in page.taxonomies.tags %}
+        <a class="muted text-sm no-underline" href="{{ get_taxonomy_url(kind="tags", name=tag, lang=lang) }}">#{{ tag }}</a>
+        {% if not loop.last %}&nbsp;{% endif %}
+        {% endfor %}
+      </p>
+      {% endif %}
+      
+      <br>
+      {% if page.updated %}
+      <div class="muted updated-time">
+        <span>Last modified on&nbsp;</span><time pubdate>{{ page.updated | date(format="%Y-%m-%d") }}</time>
+      </div>
+      <section id="backlinks">
+        {{ macro::backlink(pages=page.backlinks) }}
+      </section>
+      {% endif %}
+    </article>
+  </section>
 </div>
 {% endblock main%}
