--- a/templates/photography_album.html
+++ b/templates/photography_album.html
@@ -21,7 +21,7 @@
   <header id="overview">
     <div>
       <h1>{{ page.title }}</h1>
-      <div class="muted" style="justify-content: space-between;display: flex;">
+      <div class="muted flex justify-between">
         <time pubdate>{{ page.date | date(format="%Y-%m-%d") }}</time> 
         <span>{{ config.extra.author }}</span>
       </div>
