--- a/templates/stream.html
+++ b/templates/stream.html
@@ -14,7 +14,7 @@
       <header id="overview">        
         <div>
           <h1>{% block detail_meta_slot %}{% endblock detail_meta_slot %}{{ page.title }}</h1>
-          <div class="muted" style="justify-content: space-between;display: flex;">
+          <div class="muted flex justify-between">
             <span>Exploring my thoughts</span>
             <span>{{ config.extra.author }}</span>
           </div>
