--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
           <div class="mobile-menu">
             <a class="menu-button" href="/blog/">Blog</a>
             <a class="menu-button" href="/letters/">Letters</a>
-            <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
+            <hr class="my-md">
             <a class="menu-button" href="/about/">About</a>
             <a class="menu-button" href="/now/">Now</a>
             <a class="menu-button" href="/manifesto/">Manifesto</a>
