--- a/templates/photography_page.html
+++ b/templates/photography_page.html
@@ -32,7 +32,7 @@
         {% endblock breadcrumbs %}
         <div>
           <h1>{% block detail_meta_slot %}{% endblock detail_meta_slot %}{{ page.title }}</h1>
-          <div class="muted" style="justify-content: space-between;display: flex;">
+          <div class="muted flex justify-between">
             <time pubdate>{{ page.date | date(format="%Y-%m-%d") }}</time> 
             <span>{{ config.extra.author }}</span>
           </div>
