--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
           <div class="mobile-menu">
             <a class="menu-button" href="/blog/">Blog</a>
             <a class="menu-button" href="/letters/">Letters</a>
-            <hr class="my-md">
+            <hr>
             <a class="menu-button" href="/about/">About</a>
             <a class="menu-button" href="/now/">Now</a>
             <a class="menu-button" href="/manifesto/">Manifesto</a>
@@ -102,7 +102,7 @@
     <section id="root">
       {% block body_zone -%}
       <main class="body-zone flex justify-between flex-1">
-        <section id="main" class="main flex-1 py">
+        <section id="main" class="main flex-1">
           <div>
             {% block main %}
             {% endblock main %}
