--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,5 +1,5 @@
 {% macro post_min(page) %}
-<div class="py-sm">
+<div>
   <p class="my-neg-sm">
     <a class="no-underline li_archive" href="{{ page.permalink }}">{{ page.title }}</a> 
 </p>
