--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -13,7 +13,7 @@
     </div>
     <ul class="root-ul">
       {% for category in terms %}
-        <h3 style="margin-left: -2.5rem"><a class="no-underline" href="{{ category.permalink }}">{{ category.name }}</a> ({{
+        <h3 style="margin-left: -2.5rem"><a href="{{ category.permalink }}">{{ category.name }}</a> ({{
         category.pages | length }})</h2>
         {% for year, posts in category.pages | group_by(attribute="year") %}
         <ul style="margin-left: -2.5rem">
