--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -35,7 +35,7 @@
   --color-background: #f2f2f2;
   --color-text: rgba(0, 0, 0, 0.8);
   --color-muted: #b3b3b1;
-  --color-divider: rgb(226, 232, 240);
+  --color-divider: rgb(229, 229, 229);
   --color-code-background: rgba(0, 0, 0, 0.08);
   --color-table-stripe: #f2f2f2;
   
@@ -166,39 +166,39 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: var(--font-size-xxl);
+  font-size: var(--font-size-xl);
   padding-top: var(--spacing-md);
   padding-bottom: var(--spacing-md);
-  line-height: 1.5;
+  line-height: 2;
   font-weight: 600;
 }
 
 h2 {
-  font-size: var(--font-size-xl);
+  font-size: var(--font-size-lg);
   padding-left: var(--spacing-md);
   line-height: 1.5;
   font-weight: 600;
   position: relative;
-  margin-top: var(--spacing-md);
-  margin-bottom: var(--spacing-lg);
+  margin-top: var(--spacing-lg);
+  margin-bottom: var(--spacing-xl);
   border-left: 4px solid var(--color-primary);
   margin-left: -16px;
 }
 
 h3 {
-  font-size: var(--font-size-lg);
-  padding-top: var(--spacing-md);
-  padding-bottom: var(--spacing-sm);
-  line-height: 1.5;
+  font-size: var(--font-size-md);
+  margin-top: var(--spacing-md);
+  margin-bottom: var(--spacing-md);
+  line-height: 2;
   font-weight: 600;
 }
 
 /* Paragraphs and lists */
 p, dl, ol, ul {
-  font-size: var(--font-size-md);
+  font-size: var(--font-size-sm);
   line-height: 2;
-  margin-top: var(--spacing-md);
-  margin-bottom: var(--spacing-md);
+  margin-top: var(--spacing-sm);
+  margin-bottom: var(--spacing-sm);
 }
 
 p {
@@ -594,11 +594,10 @@ blockquote p {
 /* HR */
 hr {
   display: block;
-  height: 1px;
-  width: 50%;
+  width: 100%;
+  border-width: 0px;
   margin: 0 auto;
-  border: 1px solid var(--color-divider);
-  margin-top: var(--spacing-xl);
+  margin-top: var(--spacing-md);
   margin-bottom: var(--spacing-xl);
 }
 
@@ -736,14 +735,19 @@ hr {
 
 /* 5.9 Archive-list */
 .archive-list {
-  margin-top: 0rem;
-  margin-bottom: -1rem;
+  display: flex;
+  align-items: center;
+  color: var(--color-white);
+  text-decoration: none;
+  margin-top: var(--spacing-md);
 }
 
 .archive-list a:link,
 .archive-list a:visited {
   color: var(--color-text);
   text-decoration: none;
+  white-space: normal;
+  font-size: var(--font-size-sm);
 }
 
 .archive-list a:hover {
@@ -752,6 +756,19 @@ hr {
   text-underline-offset: 4px;
 }
 
+.dashed-line {
+  flex-grow: 1;
+  height: 1px;
+  margin: 0 0.5rem;
+  border-bottom: 1px dashed #ccc;
+}
+
+.post-date {
+  font-family: var(--font-mono);
+  font-size: var(--font-size-sm);
+  color: var(--color-text);
+  white-space: nowrap;
+}
 
 /* ==============================
    6. UTILITIES
